# geant4-template

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE.txt  README.txt  main.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
macro/: basic.mac  scoring.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
